--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <title> martijn's eerste webpagina  </title>
     </head>
     <body>
-       <!-- hier zet je de code in de body tags-->
+       <h1>dit is de eerste header</h1>
+       <h2>en dan zou dit de 2e header zijn.....</h2>
+       <p>hier komt de eerste paragraaf</p>
+       <p>en de 2e paragraaf daaronder</p>
+       <hr>
     </body>
 </html>
